samples/istio/deployment-template.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: #DEPLOYMENT-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: #SERVICE
        version: #VERSION
        runtime: #RUNTIME
        mp-version: #MPVERSION
    spec:
      containers:
      - name: #SERVICE-#RUNTIME
        image: #PREFIX/#DEPLOYMENT:#MPVERSION
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          exec:
            command:
            - curl
            - -f
            - http://localhost:8080/health
          initialDelaySeconds: 30
          periodSeconds: 10
