samples/istio/deployments.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: servicea-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: servicea
    spec:
      containers:
      - name: servicea
        image: SERVICE_A_TAG:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          exec:
            command:
            - curl
            - -f
            - http://localhost:8080/health
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: servicea-service
  labels:
    app: servicea
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: servicea
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: serviceb-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: serviceb
    spec:
      containers:
      - name: serviceb
        image: SERVICE_B_TAG:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          exec:
            command:
            - curl
            - -f
            - http://localhost:8080/health
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: serviceb-service
  labels:
    app: serviceb
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: serviceb
