samples/istio/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicea-service
  labels:
    app: servicea
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: servicea
---
apiVersion: v1
kind: Service
metadata:
  name: serviceb-service
  labels:
    app: serviceb
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: serviceb
