samples/istio/fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: serviceb
spec:
  hosts:
  - serviceb-service
  http:
  - fault:
      abort:
        percent: 25
        httpStatus: 400
    route:
    - destination:
        host: serviceb-service
